# tech_assignment

./: .env.example  Fix_ReadMe.md  README.md  main.py  main_v10.py  main_v10_fix.md  main_v4.py  main_v5.py  main_v7.py  pyproject.toml
test/: main_v7_log
