[project]
name = "tech_assignment"
version = "0.1.0"
description = "Twilio + Deepgram STT/TTS + OpenAI voice assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
]
